[fix] 시험지 내역 빈 리스트 수정 #112